Fixes vertical aligning between start/stop buttons and text

--- a/cdap-ui/app/styles/common.less
+++ b/cdap-ui/app/styles/common.less
@@ -162,6 +162,7 @@ footer {
   margin-top: 10px;
   margin-bottom: 5px;
   .programTitle {
+    vertical-align: middle;
     margin: 0;
   }
 }
